css/style.css
/* ... */
.fontcaption_grey {
    font-family: 'Lato', sans-serif;
    font-size: 13px;
    color: #bfbfbf;
    line-height: 22px;
}
.text_info {
    font-family: 'Yrsa', serif;
    color: #555963;
    line-height: 29px;
    font-size: 21px;
}

.slide_info {
    min-width: 1060px;
    margin: 0 auto;
    padding-right: 15px;
    padding-left: 15px;
}

.block_news {
    padding: 0 50px 0 0;
    width: 236px;
    float: left;
}
.button_all_news {
    text-align: center;

}

.slider_block {
    margin: 150px auto;
    width: 100%;

}

.container_wrap {
    background-color: #f7fdff;
    width: 100%;
    height: 634px;
    margin-top: 40px;
    margin-bottom: 172px;
}

.slide_block1 {
    width: 68%;
    float: left;
}
.slide_block1 img {
    max-width: 100%;
}
.slide_block2 {

    float: left;
}
.slide_block3 {
    background-color: #f7fdff;
    width: 32%;
    float: right;
    box-sizing: border-box;
}
.slide_block3 h1 {
    text-align: left;
}
.popular_series {
    margin: 120px 0 0 0;
    text-align: center;
}

.background_books {
    /* background-image: url("../img/Bitmap.png");
    background-repeat: repeat;
    height: 750px;*/
    padding: 200px 0;
    background-color: #da8913;
}

.clearfix {
    clear: both;
}
.clearfix-visible {
    content: "";
    display: table;
    clear: both;
    width: 100%;
    height: 10px;
}
.container_slider {
    width: 1060px;
}
.popular_book {
    position: relative;
    width: 200px;
    display: inline-block;
    padding: 0 37px 0 40px;
}

.popular-book-text {
    margin-top: 282px;
}

.publishers {
    max-height: 480px;
    margin: 120px auto;
    width: 100%;
}
.description h1 {
    text-align: left;
}
.description {
    float: left;
    width: 30%;
}
.description p{
    margin-bottom: 75px;
}
.partners {
    float: right;
    width: 66%;
}
.partners_block {
    width: 100%;
}
.partners_block li {
    text-align: center;
    width: 160px;
    margin: 20px 15px;
    display: inline-block;
    height: 120px;
   }
.menu_futer {
    margin-top: 58px;
    border-bottom: 1px solid #959ba1;
    padding-bottom: 84px;
}

.menu_futer ul li {
    list-style-type: none;
    float: left;
    padding: 20px 45px 20px 0;
}
.menu_futer a {
    font-family: 'Lato', sans-serif;
    font-size: 14px;
    text-transform: uppercase;
    font-weight: bold;
    list-style-type: none;
}
.footer_content {
    width: 100%;
    padding-top: 70px;
}
.footer_section_about {
    width: 100%;
    float: left;
    /*padding-top: 1%;*/
}
.footer_section_active {
    width: 350px;
    padding: 27px 11px 0 0;
    float: right;
}
.footer_section_active h2 {
    text-align: left;
}

.footer_section_active input {
background-color: #f2fdff;;
}

.section_about_header {
    padding-top: 25px;
    /*width: 47%;*/
    max-width: 585px;
    float: left;
}
.section_about_header h2 {
    padding-bottom: 25px;
    text-align: left;
}

.section_about_header p {
    /*padding-bottom: 20px;*/
    font-family: 'Yrsa', serif;
    color: #555963;
    font-size: 19px;
    line-height: 26px;
}
.footer_section_box {
    width: 663px;
    float: left;
    margin: 37px 0 0 0;
}
.section_box {
    display: inline-block;
    max-width: 217px;
    width: 25%;
    vertical-align: top;
    /* margin: 0 -10px 33px 0; */
    padding: 0 23px 40px 0;
}

.section_box p {
    font-family: 'Lato', sans-serif;
    font-size: 14px;
    line-height: 21px;
    color: #4f6569;
}

.footer_info {
    margin-top: 73px;
    display: inline-block;
    width: 100%;
    font-family: 'Lato', sans-serif;
    font-size: 15px;
    color: #555963;
}
.footer-info-left {
    float: left;
    width: 22%;
}
.footer-info-right {
    margin-top: 18px;
    width: 78%;
    float: right;
    border-bottom: 1px solid #d2d9db;
}

/*.footer_info:after {*/
    /*content: "";*/
    /*position: absolute;*/
    /*height: 1px;*/
    /*width: 20px;*/
    /*background: #d2d9db;*/
/*}*/

/*button[type=submit]:hover {
    border: none;
}
*/
.subscribe-form {
    border-bottom: 1px solid rgb(69, 70, 74);
    padding-top: 19px;
}
.subscribe-form input {
    background-color: #f2fdff;
    box-sizing: border-box;
    font-size: 15px;
    font-family: 'Lato', sans-serif;
    color: #da8913;
    border: none;
}
.subscribe-form input:focus {
    outline: none;
}
.subscribe-button::before {
    content: "";
    width: 1px;
    height: 15px;
    background: #555963;
    display: inline-block;
    vertical-align: text-top;
    margin-right: 20px;
}

.input-text input:focus {
    border-color: #da8913;
    color: #da8913;
}

.input-text input:active {
    border-color: #959ba1;
    color: #959ba1;
}

.shipping-inner {
    width: 170px;
    float: left;
}

.form-input input {
    position: relative;
    margin-left: 10px;
}



.subscribe-button{
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    line-height: 32px;
    font-weight: 500;
    padding-top: 0px;
    float: right;
    background-color: #f2fdff;
    color: #555963;
    border: none;
    cursor: pointer;
}



    .subscribe-button:focus {
    outline: none;
}

.subscribe-button::after {
    background-repeat: no-repeat;
    content: "";
    margin-left: 11px;
    background-image: url(../img/icons_svg/mail.svg);
    width: 21px;
    height: 13px;
    display: inline-block;
}

.social_icon ul li {
    float: left;
    padding: 25px 19px 0 0;
    list-style-type: none;
}
.footer_social {
    float: right;
    width: 30%;
    padding: 33px 19px 0 0;
}
.footer_social h2{
    text-align: left;
}

.checkbox-design input {
    display: none;
}
.checkbox-design input + label {
    /*padding-left: 27px;*/
    position: relative;
}
#gen-man + label {
    padding: 0 25px 0 26px;
}
#gen-woman + label {
    padding: 0 0 0 27px;
}

.checkbox-design input + label::before {
    content: '';
    position: absolute;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
    display: inline-block;
    width: 17px;
    height: 17px;
    border: 1px solid #da8913;
    border-radius: 50%;
}
/* ... */

